@@ -1,3 +1,9 @@
+2002-07-11  Alexander Larsson  <alexl@redhat.com>
+
+	* modules/file-method.c (get_stat_info, do_open):
+	Correctly set O_TRUNC in do_open.
+	Fix uninitialized memory read bug with symlinks in get_stat_info.	
+
 2002-07-05  Stephen Browne  <stephen.browne@sun.com>
 	* modules/cdemenu-desktop-method.c
 	Patch from rohit.raveendran@wipro.com
